fix: comply with change in getignore (requires f.q. name), support both the new Mac M1 and the Mac Intel, comply with new zsh compaudit flag of homebrew's 'share' dir

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -9,7 +9,7 @@ brew "zsh-completions"
 brew "docker"
 brew "emacs"
 brew "exa"
-brew "getignore"
+brew "gotgenes/gotgenes/getignore"
 brew "git"
 brew "git-lfs"
 brew "go"
