fix: The docker install now works also on M1 Macs. Also added Kubernetes cli.

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -6,7 +6,6 @@ tap "gotgenes/homebrew-gotgenes"
 brew "ack"
 brew "bash-completion"
 brew "zsh-completions"
-brew "docker"
 brew "emacs"
 brew "exa"
 brew "gotgenes/gotgenes/getignore"
@@ -14,6 +13,7 @@ brew "git"
 brew "git-lfs"
 brew "go"
 brew "java"
+brew "kubernetes-cli"
 brew "lynx"
 brew "mas"
 brew "node"
@@ -26,6 +26,7 @@ brew "python"
 brew "wget"
 brew "yarn"
 cask "brave-browser"
+cask "docker"
 cask "gimp"
 cask "google-chrome"
 cask "kindle"
