Add postman cask

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -32,6 +32,7 @@ cask "docker"
 cask "gimp"
 cask "google-chrome"
 cask "kindle"
+cask "postman"
 cask "sequel-pro"
 cask "slack"
 cask "virtualbox"
